# JitAotCourseMipt

./: .gitignore  BasicBlock.cpp  BasicBlock.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  Instruction.cpp  Instruction.hpp  README.md  main.cpp
include/: BasicBlock.hpp  DomTree.hpp  Function.hpp  Graph.hpp  Indexer.hpp  Instruction.hpp  LivenessAnalysis.hpp  Loop.hpp  LoopAnalyzer.hpp  Optimizations.hpp  RPO.hpp  Value.hpp
include/optimizations/: ConstantFolding.hpp  Peephole.hpp  StaticInline.hpp
src/: BasicBlock.cpp  CMakeLists.txt  DomTree.cpp  Function.cpp  Graph.cpp  Instruction.cpp  LivenessAnalysis.cpp  LoopAnalyzer.cpp  RPO.cpp
src/optimizations/: ConstantFolding.cpp  Peephole.cpp  StaticInline.cpp
tests/: CMakeLists.txt  test_RPO.cpp  test_constantFolding.cpp  test_copy_calleeGraph.cpp  test_domTree.cpp  test_graph.cpp  test_livenessAnalysis.cpp  test_loopAnalyzer.cpp  test_peepholes.cpp  test_staticInline.cpp
